Corrected issue with Mixer::getOutputGroups.